# McCad

./: .gitignore  CMakeLists.txt  Changes.txt  McCad.files  McCad.includes  README.md  prepareForShipping.sh
assets/.svn/: all-wcprops  entries
assets/images/: QMaker  old_splash  qmccad.qrc
assets/images/.svn/: all-wcprops  entries
assets/images/.svn/text-base/: Makefile.svn-base  axe_box.png.svn-base  axis.png.svn-base  bottomview.png.svn-base  (+26 more)
assets/ui/: AssistVolume.ui  ClippingPlane.ui  CopyTo.ui  MakeSphere.ui  MaterialBox.ui  QMcCadGeomeTree_MCardDialog1.ui  QMcCadGeomeTree_TreeView_GRID.ui  QMcCadGeomeTree_TreeWidget.h  QMcCadGeomeTree_TreeWidget_GRID.ui  QMcCadMaterialDialog.ui  QMcCadMaterialDialog2.ui  QMcCad_TransparencyDialog.ui  Rotate.ui  ui_MaterialBox.h  ui_McCadDesign_MakeCylinder.h  ui_QMcCad_TransparencyDialog.h
assets/ui/.svn/: all-wcprops  entries
bld/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  McCad.cbp  cmake_install.cmake  install_manifest.txt
bld/src/: Makefile
bld/test/: Makefile  cmake_install.cmake
doc/: Doxyfile
doc/.svn/: all-wcprops  entries
doc/html/: index.html
doc/html/.svn/: all-wcprops  entries
doc/html/mccadwiki/: InstallingOCC.html
inc/: McCadCSGBuild_SolidFromCSG.hxx  McCadCSGTool_SurfaceChecker.hxx  McCadCom_CasDocument.jxx  McCadCom_CasView.hxx  McCadMessenger_Singleton.hxx  McCadXCAF_TDocShapeLabelIterator.hxx  QMcCadGeomeTree_TreeWidget.hxx  QMcCad_Editor.h
inc/.svn/: all-wcprops  entries
inc/.svn/text-base/: Handle_McCadTDS_ExtSolid.hxx.svn-base  McCadCSGTool.hxx.svn-base  McCadConvertTools_Convertor.hxx.svn-base  McCadIOHelper_VGParameters.hxx.svn-base  McCadMcRead_SequenceOfCell.hxx.svn-base  McCadViewTool_RedisplaySelected.hxx.svn-base  McCadXCAF_TDocShapeLabelIterator.hxx.svn-base  QMcCadGeomeTree_TreeWidget.hxx.svn-base  QMcCad_ActionMaster.h.svn-base  QMcCad_Editor.h.svn-base  ui_McCad_LoadVisualizationList.h.svn-base  ui_QMcCadGeomeTree_MCardDialog.h.svn-base
lib/.svn/: all-wcprops  entries
qtcreator-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  McCad.cbp  cmake_install.cmake
qtcreator-build/src/: Makefile  cmake_install.cmake
qtcreator-build/test/: Makefile  cmake_install.cmake
src/: CMakeLists.txt
src/.svn/: all-wcprops  entries
src/.svn/text-base/: CMakeLists.txt.svn-base
src/McCadAEV/: McCadAEV_Viewer.cxx
src/McCadAEV/.svn/: all-wcprops  entries
src/McCadBoolExp/.svn/: all-wcprops  entries
src/McCadCSGAdapt/.svn/: all-wcprops  entries
src/McCadCSGBuild/: McCadCSGBuild_SolidFromCSG.cxx
src/McCadCSGBuild/.svn/: all-wcprops  entries
src/McCadCSGGeom/.svn/: all-wcprops  entries
src/McCadCSGTool/: McCadCSGTool.cxx  McCadCSGTool_Cutter.cxx
src/McCadCSGTool/.svn/: all-wcprops  entries
src/McCadCSGUtil/: McCadCSGUtil_SolidBuilder.cxx
src/McCadCSGUtil/.svn/: all-wcprops  entries
src/McCadCom/: McCadCom_CasView.cxx
src/McCadCom/.svn/: all-wcprops  entries
src/McCadConvertTools/: McCadConvertTools_VoidGenerator.cxx
src/McCadConvertTools/.svn/: all-wcprops  entries
src/McCadDecompose/: McCadBndSurfCylinder.cxx  McCadBndSurfCylinder.hxx  McCadBndSurface.cxx  McCadBndSurface.hxx  McCadDecompose.cxx  McCadDecompose.hxx  McCadTriangle.cxx  McCadTriangle.hxx
src/McCadDesign/.svn/: all-wcprops  entries
src/McCadDiscDs/.svn/: all-wcprops  entries
src/McCadDiscretization/.svn/: all-wcprops  entries
src/McCadEXPlug/: McCadEXPlug_PluginManager.cxx
src/McCadEXPlug/.svn/: all-wcprops  entries
src/McCadEditTool/.svn/: all-wcprops  entries
src/McCadExDllBrep/.svn/: all-wcprops  entries
src/McCadExDllIges/: McCadExDllIges_Iges.cxx
src/McCadExDllIges/.svn/: all-wcprops  entries
src/McCadExDllMcnp/: McCadExDllMcnp_Mcnp.cxx
src/McCadExDllMcnp/.svn/: all-wcprops  entries
src/McCadExDllStep/: McCadExDllStep_Step.cxx
src/McCadExDllStep/.svn/: all-wcprops  entries
src/McCadExDllStl/.svn/: all-wcprops  entries
src/McCadExDllTripoli/.svn/: all-wcprops  entries
src/McCadGTOOL/.svn/: all-wcprops  entries
src/McCadGUI/.svn/: all-wcprops  entries
src/McCadIOHelper/: McCadIOHelper_InputFileParser.cxx
src/McCadIOHelper/.svn/: all-wcprops  entries
src/McCadIOTools/: McCadIOTools_MCExportBase.cxx  McCadInputModelData.cxx
src/McCadIOTools/.svn/: all-wcprops  entries
src/McCadMDReader/.svn/: all-wcprops  entries
src/McCadMcRead/.svn/: all-wcprops  entries
src/McCadMcVoid/: IGeomFace.hxx  IMcCadWriter.hxx  McCadConvexSolid.hxx  McCadExtBndFace.cxx  McCadExtFace.hxx  McCadGeomData.cxx  McCadGeomData.hxx  McCadMcVoid_Generator.cxx  McCadMcnpWriter.cxx  McCadMcnpWriter.hxx  McCadTripoliWriter.cxx  McCadTripoliWriter.hxx  McCadVoidCellManager.cxx  McCadVoidCellManager.hxx  McCadVoidGenerator.cxx
src/McCadMcVoid/.svn/: all-wcprops  entries
src/McCadMcWrite/.svn/: all-wcprops  entries
src/McCadMessenger/.svn/: all-wcprops  entries
src/McCadTDS/.svn/: all-wcprops  entries
src/McCadTool/: Material.hxx  McCadConvertConfig.cxx  McCadConvertConfig.hxx  McCadGeneTool.cxx  McCadMathTool.cxx
src/McCadTool/.svn/: entries
src/McCadViewTool/: McCadViewTool_Delete.cxx  McCadViewTool_DisplaySelectedOnly.cxx  McCadViewTool_ReadValueList.cxx  McCadViewTool_RedisplaySelected.cxx  McCadViewTool_ShowAll.cxx
src/McCadViewTool/.svn/: all-wcprops  entries
src/McCadWin/.svn/: all-wcprops  entries
src/McCadXCAF/.svn/: all-wcprops  entries
src/QMcCad/: QMcCad_ActionFactory.cpp  QMcCad_Application.cpp  QMcCad_View.cpp  QMcCad_Viewer.cpp  main.cpp  moc_QMcCad_VGParamDialog.cxx
src/QMcCad/.svn/: all-wcprops  entries
src/QMcCadGeomeTree/.svn/: all-wcprops  entries
src/QMcCadMessenger/: QMcCadMessenger_MainWindowMessage.cxx
src/QMcCadMessenger/.svn/: all-wcprops  entries
tutorial/.svn/: all-wcprops  entries
tutorial/decomposition/.svn/: all-wcprops  entries
tutorial/decomposition/conversion/: McCadInputFile.txt
tutorial/preparation/: example1.stp
tutorial/preparation/.svn/: all-wcprops  entries
tutorial/problematic/: problemgeometry.stp
tutorial/problematic/.svn/: all-wcprops  entries
(+121 files in other folders)
